--- a/historia.html
+++ b/historia.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar sticky-top navbar-dark bg-dark d-md-none">
-      <a class="navbar-brand" href="#"><img src="coffee-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+      <a class="navbar-brand" href="index.html"><img src="coffee-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
