--- a/galeria.html
+++ b/galeria.html
@@ -51,13 +51,39 @@
             <div class="col-12 col-md-9 col-lg-6 content">
                 <h2>Galeria</h2>
                 <div class="row">
-                    <div class="col-md-6 img">
-                        <img src="img/kawahead.jpg" alt="cafe">
+                  <div class="col-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                      <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      </ol>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img class="d-block w-100" src="img/PIXNIO-2519536-1200x800.jfif" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="img/deser.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="img/coffee-cup-beans-arrangement.jpg" alt="Third slide">
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
                     </div>
-                    <div class="col-md-6 img">
-                        <img src="img/coffee-cup-beans-arrangement.jpg" alt="cafe">
-                        <img src="img/deser.jpg" alt="cafe">
-                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/S3HMHYBGm5M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </div>
             </div>
             <div class="col-3 d-none d-lg-block aside">
